Fix line-height for emojis cut off (#8262)

--- a/src/sass/components/dropdowns/dropdownFolder.scss
+++ b/src/sass/components/dropdowns/dropdownFolder.scss
@@ -66,6 +66,7 @@
     padding: .5rem 0;
     text-align: left;
     cursor: pointer;
+    line-height: normal;
 }
 
 .dropdown-folder-scrollbox-group-item-button > div {
